
true64 fix........

-------------------------------------------------------------------------------

Sun Dec 12 13:17:45 PST 1999
(Raster)

ooooooops :) tabel paddign done wrong...

-------------------------------------------------------------------------------

Wed Dec 15 13:47:12 PST 1999
(KainX)

Patches from Peter Kjellerstedt <peter.kjellerstedt@axis.com>
for typos and such.

-------------------------------------------------------------------------------

Thu Dec 16 18:28:59 PST 1999
(Mandrake)

this is a test commit to see if the list works again.

-------------------------------------------------------------------------------

Tue Dec 21 08:02:15 PST 1999
(Raster)

add in patches from 2 AUTHORS for internationalisation...

-------------------------------------------------------------------------------

Tue Dec 21 08:12:29 PST 1999
(Raster)

fix some consitancies for text but peter um.. :) not all that patch was 
typos.. the original spelling was correct. I was using "English" not "American"
:) (note Enlish spelligns for colour is coloUr not color, and initialise is 
with an S not a Z in English) :)

-------------------------------------------------------------------------------

Tue Dec 21 08:23:33 PST 1999
(Raster)

patch for file finding internationalisation...

-------------------------------------------------------------------------------

Tue Dec 21 13:23:45 PST 1999
(Mandrake)

added "extended" data display mode to window_list IPC command.
you can get an extended list using "window_list extended"
returns the following format:
"window_id : title :: desktop : area_x area_y : x_coordinate y_coordinate


-------------------------------------------------------------------------------

Tue Dec 21 22:29:49 PST 1999
(Mandrake)

fixed minor ipc help indention problem

-------------------------------------------------------------------------------

Thu Dec 23 10:46:56 PST 1999
(Raster)

dont animate if animate is turend off for iconbox when dnd to iconbox..